# word-bank

./: .dockerignore  .gitignore  Dockerfile  Makefile  codemagic.yaml  docker-compose.pg.yml  docker-compose.yml  fly.toml  go.mod  go.sum
.github/workflows/: master.yaml
api/: Cargo.toml  server.go
api/middleware/: auth.go
api/quiz/: handlers.result.go  routes.go
api/src/: constants.rs  error.rs  main.rs  models.rs  state.rs
api/src/controllers/: folders.rs  mod.rs  quiz.rs  stats.rs  words.rs
api/src/middleware/: auth.rs
api/word/: handlers.folder.go  handlers.go  handlers.word.go  routes.go
app/: capacitor.config.ts  ionic.config.json  package-lock.json  package.json  tailwind.config.js
app/src/: App.vue  URLS.ts  main.ts  shims-svg.d.ts  shims-vue.d.ts
cli/: Cargo.toml  Makefile
cli/src/: config.rs  main.rs
cmd/api/: main.go
internal/arrayutil/: arrayutil.go
internal/echoutil/: bind.go  error.go  params.go  params_test.go
internal/pg/: pgstore.go  pgstore_quiz.go  (+3 more)
lib/: .gitignore  Cargo.toml  Makefile  diesel.toml
lib/migrations/2022-06-05-202135_init_wordbank/: down.sql  up.sql
lib/migrations/2022-06-05-204921_init_quizresults/: up.sql
lib/src/: client.rs  lib.rs  models.rs
lib/src/client/: client.rs  db.rs  mod.rs
lib/src/db/: mod.rs  models.rs
lib/src/models/: base.rs  folder.rs  misc.rs  mod.rs  quiz.rs  stats.rs  word.rs
lib/src/mongo/: client_mongo.rs  client_mongo_folder.rs  client_mongo_quiz.rs  client_mongo_stats.rs  client_mongo_word.rs  context.rs  db.rs  env.rs  mod.rs  models.rs
lib/src/mongo/models/: mod.rs  quiz.rs  words.rs
lib/src/psql/: client_pg.rs  client_pg_word.rs  context.rs  mod.rs  models.rs  schema.rs
lib/src/psql/models/: mod.rs  words.rs
lib/src/psql/sqlbuilder/: mod.rs
lib/src/utils/: env.rs  mod.rs  serialization.rs
lib/tests/: test_client_delete.rs  test_client_insert.rs  test_client_list.rs  test_client_update.rs  test_db_index.rs
(+78 files in other folders)
