[package]
authors = ["Anders Hallem Iversen <andershallemiversen@hotmail.com>"]
edition = "2018"
name = "api"
version = "0.1.0"

[dependencies]
lib = { path = "../lib" }
dotenv = "0.15.0"
futures = "0.3"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }