[package]
authors = ["Anders Hallem Iversen <andershallemiversen@hotmail.com>"]
edition = "2018"
name = "cli"
version = "0.1.0"
debug-assertions = false

[dependencies]
lib = { path = "../lib" }
clap = "2.32"
directories = "4.0.1"
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
toml = "0.5.8"
uuid = { version = "0.8", features = ["serde", "v4"] }