[package]
name = "lib"
version = "0.1.0"
authors = ["Anders Hallem Iversen <andershallemiversen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync", "bson-chrono-0_4"]
