[package]
name = "lib"
version = "0.1.0"
authors = ["Anders Hallem Iversen <andershallemiversen@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync", "bson-chrono-0_4", "bson-uuid-0_8"]

[dev-dependencies]